syntax = "proto3";

package proto;
option go_package = "./;proto";

import "FriendBrief.proto";

message GetPlayerFriendListRsp {
  enum CmdId {
    option allow_alias = true;
    NONE = 0;
    ENET_CHANNEL_ID = 0;
    ENET_IS_RELIABLE = 1;
    IS_ALLOW_CLIENT = 1;
    CMD_ID = 4031;
  }

  int32 retcode = 3;
  repeated FriendBrief friend_list = 6;
  repeated FriendBrief ask_friend_list = 5;
}
