syntax = "proto3";

package proto;
option go_package = "./;proto";

import "MassivePropParam.proto";

message MassivePropSyncInfo {
  int64 id = 1;
  repeated MassivePropParam prop_list = 2;
}
